--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![Outline Info](guideline.png)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/index.js",
+    "dev": "nodemon backend/index.js"
   },
   "keywords": [],
   "author": "",
